--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 fromsendemail =ceoparker@zexxa.tech
 recaptcha_key_2 =6LelEHYoAAAAAIQ1ZrPVHXzTTopKcYr9svuffEWS
 recaptcha_key_1 =6LelEHYoAAAAANoL7Dc5BSJkw-xNTnAgDHlGI1X1
-mongodb =mongodb+srv://apizexxadev:GtPQC6nfK6zoSPa1@apizexxa.fznebbi.mongodb.net/?retryWrites=true&w=majority
-sendpwmail =enzt iadg wais ogoq
-sendemail =cisauxgasp@gmail.com
+mongodb =mongodb+srv://kimzz:WQpJjtnJ8R9HffPi@cluster0.m56e0mj.mongodb.net/?retryWrites=true&w=majority
+sendpwmail =ujqvkselgmpmyunf
+sendemail =hakimff4433@gmail.com
